# vectornav_driver

./: .gitignore  CMakeLists.txt  default.nix  flake.nix  vn_configurator.nix  vn_driver_lib.nix  vn_driver_lib_gen.nix
configurator/: setup.py  write.py
dsl/: main.xml  schema.xml
include/: driver.h
src/: driver.cpp  main.cpp  main_cons.cpp  main_prod.cpp
test/: main_cons.cpp  main_vn_test.cpp
